smart-monitor：日志同步功能改成可以通过配置文件开启关闭，默认关闭状态